--- a/archives/toutiao-search/2024-04-08.md
+++ b/archives/toutiao-search/2024-04-08.md
@@ -1,54 +1,73 @@
 # 2024-04-08
 
-共 137 条
+共 154 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 08 2024 09:40:42 GMT+0800 (China Standard Time) -->
-1. [俄新兵歼敌27人被授予国家最高奖章](https://so.toutiao.com/search?keyword=俄新兵歼敌27人被授予国家最高奖章)
+<!-- 最后更新时间 Mon Apr 08 2024 10:16:05 GMT+0800 (China Standard Time) -->
+1. [邯郸初中生被害案3名嫌犯将承担刑责](https://so.toutiao.com/search?keyword=邯郸初中生被害案3名嫌犯将承担刑责)
 1. [专家：以色列撤军是谁害怕了](https://so.toutiao.com/search?keyword=专家：以色列撤军是谁害怕了)
 1. [假期消费“热辣滚烫”](https://so.toutiao.com/search?keyword=假期消费“热辣滚烫”)
-1. [今年全球唯一一次日全食将来了](https://so.toutiao.com/search?keyword=今年全球唯一一次日全食将来了)
 1. [警方通报山西临汾多人当街持械砸车](https://so.toutiao.com/search?keyword=警方通报山西临汾多人当街持械砸车)
+1. [今年全球唯一一次日全食将来了](https://so.toutiao.com/search?keyword=今年全球唯一一次日全食将来了)
 1. [奔驰车主回应轧蒜苗被砸车](https://so.toutiao.com/search?keyword=奔驰车主回应轧蒜苗被砸车)
-1. [女生接老人回家小住 老人早早等候](https://so.toutiao.com/search?keyword=女生接老人回家小住+老人早早等候)
-1. [俄乌打响争夺战略要地之战](https://so.toutiao.com/search?keyword=俄乌打响争夺战略要地之战)
-1. [第一批去埃及旅行的人快被骗到裸奔](https://so.toutiao.com/search?keyword=第一批去埃及旅行的人快被骗到裸奔)
-1. [为免门票游客集体背诵《蜀道难》](https://so.toutiao.com/search?keyword=为免门票游客集体背诵《蜀道难》)
-1. [成龙70岁生日回应头发胡子都白了](https://so.toutiao.com/search?keyword=成龙70岁生日回应头发胡子都白了)
-1. [媒体：耶伦访华的一细节值得美深思](https://so.toutiao.com/search?keyword=媒体：耶伦访华的一细节值得美深思)
-1. [马克·威廉姆斯：没想到49岁能夺冠](https://so.toutiao.com/search?keyword=马克·威廉姆斯：没想到49岁能夺冠)
-1. [贵州辟谣“中国天眼变成垃圾场”](https://so.toutiao.com/search?keyword=贵州辟谣“中国天眼变成垃圾场”)
-1. [3月俄罗斯汽车销量：中国品牌占9席](https://so.toutiao.com/search?keyword=3月俄罗斯汽车销量：中国品牌占9席)
-1. [《追风者》收官](https://so.toutiao.com/search?keyword=《追风者》收官)
-1. [专家建议允许不合适的公务员辞职](https://so.toutiao.com/search?keyword=专家建议允许不合适的公务员辞职)
-1. [伊朗报复以色列会否雷声大雨点小](https://so.toutiao.com/search?keyword=伊朗报复以色列会否雷声大雨点小)
-1. [大爷花两万七学组装锂电池挣了180](https://so.toutiao.com/search?keyword=大爷花两万七学组装锂电池挣了180)
-1. [耶伦两次访华有何不同](https://so.toutiao.com/search?keyword=耶伦两次访华有何不同)
-1. [五一假期前后都要调休上班](https://so.toutiao.com/search?keyword=五一假期前后都要调休上班)
-1. [央行为什么增持黄金储备](https://so.toutiao.com/search?keyword=央行为什么增持黄金储备)
-1. [以色列“罕见认错”难平众怒](https://so.toutiao.com/search?keyword=以色列“罕见认错”难平众怒)
-1. [广东梅江将发生超5年一遇洪水](https://so.toutiao.com/search?keyword=广东梅江将发生超5年一遇洪水)
-1. [官方回应骑行博主称公厕充电遭威胁](https://so.toutiao.com/search?keyword=官方回应骑行博主称公厕充电遭威胁)
-1. [以色列何以从被同情走向被广泛批评](https://so.toutiao.com/search?keyword=以色列何以从被同情走向被广泛批评)
-1. [今年还要调休3次](https://so.toutiao.com/search?keyword=今年还要调休3次)
-1. [莫桑比克沉船事故造成至少91人死亡](https://so.toutiao.com/search?keyword=莫桑比克沉船事故造成至少91人死亡)
-1. [“提灯定损”事发地住着很多陪读妈妈](https://so.toutiao.com/search?keyword=“提灯定损”事发地住着很多陪读妈妈)
-1. [律师：大妈原本受害砸奔驰构成犯罪](https://so.toutiao.com/search?keyword=律师：大妈原本受害砸奔驰构成犯罪)
-1. [全红婵家族清明祭祖场面引争议](https://so.toutiao.com/search?keyword=全红婵家族清明祭祖场面引争议)
+1. [俄新兵歼敌27人被授予国家最高奖章](https://so.toutiao.com/search?keyword=俄新兵歼敌27人被授予国家最高奖章)
 1. [老夫妇居家俩月用水1023吨](https://so.toutiao.com/search?keyword=老夫妇居家俩月用水1023吨)
+1. [第一批去埃及旅行的人快被骗到裸奔](https://so.toutiao.com/search?keyword=第一批去埃及旅行的人快被骗到裸奔)
+1. [成都地铁一男子疑站立猥亵](https://so.toutiao.com/search?keyword=成都地铁一男子疑站立猥亵)
+1. [成龙70岁生日回应头发胡子都白了](https://so.toutiao.com/search?keyword=成龙70岁生日回应头发胡子都白了)
+1. [萌娃和老爸聊天句句有回应](https://so.toutiao.com/search?keyword=萌娃和老爸聊天句句有回应)
+1. [俄乌打响争夺战略要地之战](https://so.toutiao.com/search?keyword=俄乌打响争夺战略要地之战)
+1. [成都“迪士尼”被拆除？街道办辟谣](https://so.toutiao.com/search?keyword=成都“迪士尼”被拆除？街道办辟谣)
+1. [3月俄罗斯汽车销量：中国品牌占9席](https://so.toutiao.com/search?keyword=3月俄罗斯汽车销量：中国品牌占9席)
+1. [虐猫考生说不是很懂舆论暂不回应](https://so.toutiao.com/search?keyword=虐猫考生说不是很懂舆论暂不回应)
+1. [仝卓工作室向仝卓讨债](https://so.toutiao.com/search?keyword=仝卓工作室向仝卓讨债)
+1. [以色列何以从被同情走向被广泛批评](https://so.toutiao.com/search?keyword=以色列何以从被同情走向被广泛批评)
+1. [为免门票游客集体背诵《蜀道难》](https://so.toutiao.com/search?keyword=为免门票游客集体背诵《蜀道难》)
 1. [高校干部被举报有不正当关系](https://so.toutiao.com/search?keyword=高校干部被举报有不正当关系)
+1. [五一假期前后都要调休上班](https://so.toutiao.com/search?keyword=五一假期前后都要调休上班)
+1. [专家建议允许不合适的公务员辞职](https://so.toutiao.com/search?keyword=专家建议允许不合适的公务员辞职)
+1. [耶伦两次访华有何不同](https://so.toutiao.com/search?keyword=耶伦两次访华有何不同)
+1. [李雪琴答题速度惊呆十个勤天](https://so.toutiao.com/search?keyword=李雪琴答题速度惊呆十个勤天)
+1. [特朗普24小时解决俄乌战争计划曝光](https://so.toutiao.com/search?keyword=特朗普24小时解决俄乌战争计划曝光)
+1. [伊朗报复以色列会否雷声大雨点小](https://so.toutiao.com/search?keyword=伊朗报复以色列会否雷声大雨点小)
+1. [今年还要调休3次](https://so.toutiao.com/search?keyword=今年还要调休3次)
+1. [波音被质疑向飞行员隐瞒驾驶舱功能](https://so.toutiao.com/search?keyword=波音被质疑向飞行员隐瞒驾驶舱功能)
+1. [俄外长访华要谈哪些问题](https://so.toutiao.com/search?keyword=俄外长访华要谈哪些问题)
+1. [虐猫考生已参加兰大研究生调剂复试](https://so.toutiao.com/search?keyword=虐猫考生已参加兰大研究生调剂复试)
+1. [全红婵家族清明祭祖场面引争议](https://so.toutiao.com/search?keyword=全红婵家族清明祭祖场面引争议)
+1. [“提灯定损”事发地住着很多陪读妈妈](https://so.toutiao.com/search?keyword=“提灯定损”事发地住着很多陪读妈妈)
+1. [马克·威廉姆斯：没想到49岁能夺冠](https://so.toutiao.com/search?keyword=马克·威廉姆斯：没想到49岁能夺冠)
+1. [中办通知：在全党开展党纪学习教育](https://so.toutiao.com/search?keyword=中办通知：在全党开展党纪学习教育)
+1. [囤金大户忙着把黄金变现](https://so.toutiao.com/search?keyword=囤金大户忙着把黄金变现)
+1. [扎克伯格身家超过马斯克](https://so.toutiao.com/search?keyword=扎克伯格身家超过马斯克)
+1. [女生接老人回家小住 老人早早等候](https://so.toutiao.com/search?keyword=女生接老人回家小住+老人早早等候)
+1. [央行为什么增持黄金储备](https://so.toutiao.com/search?keyword=央行为什么增持黄金储备)
+1. [媒体：美财长耶伦或许是中餐爱好者](https://so.toutiao.com/search?keyword=媒体：美财长耶伦或许是中餐爱好者)
+1. [美航司波音客机起飞时发动机罩脱落](https://so.toutiao.com/search?keyword=美航司波音客机起飞时发动机罩脱落)
+1. [女子半身被卷入扶梯 超市暂停营业](https://so.toutiao.com/search?keyword=女子半身被卷入扶梯+超市暂停营业)
+1. [夫妻吵架美警进门直接打死持枪丈夫](https://so.toutiao.com/search?keyword=夫妻吵架美警进门直接打死持枪丈夫)
+1. [失业送外卖的985硕士入职当老师](https://so.toutiao.com/search?keyword=失业送外卖的985硕士入职当老师)
+1. [广东梅江将发生超5年一遇洪水](https://so.toutiao.com/search?keyword=广东梅江将发生超5年一遇洪水)
+1. [广东韶关7名村民扫墓时遭遇雷击](https://so.toutiao.com/search?keyword=广东韶关7名村民扫墓时遭遇雷击)
+1. [虐猫能否成为拒绝录取的理由](https://so.toutiao.com/search?keyword=虐猫能否成为拒绝录取的理由)
+1. [莫桑比克沉船事故造成至少91人死亡](https://so.toutiao.com/search?keyword=莫桑比克沉船事故造成至少91人死亡)
+1. [加沙停火谈判正努力解决关键争议点](https://so.toutiao.com/search?keyword=加沙停火谈判正努力解决关键争议点)
+1. [俄军新兵带队攻入乌军阵地视频曝光](https://so.toutiao.com/search?keyword=俄军新兵带队攻入乌军阵地视频曝光)
+1. [iPhone 16系列外观曝光](https://so.toutiao.com/search?keyword=iPhone+16系列外观曝光)
+1. [媒体：耶伦访华的一细节值得美深思](https://so.toutiao.com/search?keyword=媒体：耶伦访华的一细节值得美深思)
+1. [贵州辟谣“中国天眼变成垃圾场”](https://so.toutiao.com/search?keyword=贵州辟谣“中国天眼变成垃圾场”)
+1. [《追风者》收官](https://so.toutiao.com/search?keyword=《追风者》收官)
+1. [大爷花两万七学组装锂电池挣了180](https://so.toutiao.com/search?keyword=大爷花两万七学组装锂电池挣了180)
+1. [以色列“罕见认错”难平众怒](https://so.toutiao.com/search?keyword=以色列“罕见认错”难平众怒)
+1. [官方回应骑行博主称公厕充电遭威胁](https://so.toutiao.com/search?keyword=官方回应骑行博主称公厕充电遭威胁)
+1. [律师：大妈原本受害砸奔驰构成犯罪](https://so.toutiao.com/search?keyword=律师：大妈原本受害砸奔驰构成犯罪)
 1. [哥哥想照顾妹妹不小心将其摔下沙发](https://so.toutiao.com/search?keyword=哥哥想照顾妹妹不小心将其摔下沙发)
 1. [男子路过学校被小孩哥叫住帮忙跑腿](https://so.toutiao.com/search?keyword=男子路过学校被小孩哥叫住帮忙跑腿)
-1. [虐猫能否成为拒绝录取的理由](https://so.toutiao.com/search?keyword=虐猫能否成为拒绝录取的理由)
-1. [夫妻吵架美警进门直接打死持枪丈夫](https://so.toutiao.com/search?keyword=夫妻吵架美警进门直接打死持枪丈夫)
 1. [热刺3-1诺丁汉森林升至联赛第4](https://so.toutiao.com/search?keyword=热刺3-1诺丁汉森林升至联赛第4)
 1. [范志毅或接任辽宁铁人主帅](https://so.toutiao.com/search?keyword=范志毅或接任辽宁铁人主帅)
 1. [白岩松评江西提灯定损事件](https://so.toutiao.com/search?keyword=白岩松评江西提灯定损事件)
-1. [女子半身被卷入扶梯 超市暂停营业](https://so.toutiao.com/search?keyword=女子半身被卷入扶梯+超市暂停营业)
 1. [高速免费 网约车司机却另收费](https://so.toutiao.com/search?keyword=高速免费+网约车司机却另收费)
-1. [李雪琴答题速度惊呆十个勤天](https://so.toutiao.com/search?keyword=李雪琴答题速度惊呆十个勤天)
 1. [空军新型战机让055大驱“吃苦头”](https://so.toutiao.com/search?keyword=空军新型战机让055大驱“吃苦头”)
-1. [仝卓工作室向仝卓讨债](https://so.toutiao.com/search?keyword=仝卓工作室向仝卓讨债)
 1. [胡塞武装称多次袭击以色列相关船只](https://so.toutiao.com/search?keyword=胡塞武装称多次袭击以色列相关船只)
 1. [火箭无缘季后赛 勇士锁定西部前十](https://so.toutiao.com/search?keyword=火箭无缘季后赛+勇士锁定西部前十)
 1. [客服回应小米SU7座椅顶碎化妆镜](https://so.toutiao.com/search?keyword=客服回应小米SU7座椅顶碎化妆镜)
@@ -93,8 +112,6 @@
 1. [广西人上4天休4天](https://so.toutiao.com/search?keyword=广西人上4天休4天)
 1. [成都“迪士尼”被限流](https://so.toutiao.com/search?keyword=成都“迪士尼”被限流)
 1. [以色列冒险袭击伊朗的三重动机](https://so.toutiao.com/search?keyword=以色列冒险袭击伊朗的三重动机)
-1. [俄军新兵带队攻入乌军阵地视频曝光](https://so.toutiao.com/search?keyword=俄军新兵带队攻入乌军阵地视频曝光)
-1. [媒体：美财长耶伦或许是中餐爱好者](https://so.toutiao.com/search?keyword=媒体：美财长耶伦或许是中餐爱好者)
 1. [李强会见美财长耶伦](https://so.toutiao.com/search?keyword=李强会见美财长耶伦)
 1. [以防长：已做好应对伊朗行动准备](https://so.toutiao.com/search?keyword=以防长：已做好应对伊朗行动准备)
 1. [瑞典“环保少女”在荷兰2次被捕](https://so.toutiao.com/search?keyword=瑞典“环保少女”在荷兰2次被捕)
