--- a/archives/toutiao-search/2024-04-08.md
+++ b/archives/toutiao-search/2024-04-08.md
@@ -1,45 +1,75 @@
 # 2024-04-08
 
-共 169 条
+共 195 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 08 2024 11:00:34 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Apr 08 2024 12:00:45 GMT+0800 (China Standard Time) -->
+1. [拉夫罗夫抵京对中国进行正式访问](https://so.toutiao.com/search?keyword=拉夫罗夫抵京对中国进行正式访问)
+1. [初中生被害案嫌犯最高可判什么刑](https://so.toutiao.com/search?keyword=初中生被害案嫌犯最高可判什么刑)
+1. [清明国内游客出游花费539.5亿元](https://so.toutiao.com/search?keyword=清明国内游客出游花费539.5亿元)
 1. [专家：以色列撤军是谁害怕了](https://so.toutiao.com/search?keyword=专家：以色列撤军是谁害怕了)
-1. [警方通报山西临汾多人当街持械砸车](https://so.toutiao.com/search?keyword=警方通报山西临汾多人当街持械砸车)
-1. [假期消费“热辣滚烫”](https://so.toutiao.com/search?keyword=假期消费“热辣滚烫”)
-1. [失业送外卖的985硕士入职当老师](https://so.toutiao.com/search?keyword=失业送外卖的985硕士入职当老师)
-1. [老夫妇居家俩月用水1023吨](https://so.toutiao.com/search?keyword=老夫妇居家俩月用水1023吨)
-1. [今年全球唯一一次日全食将来了](https://so.toutiao.com/search?keyword=今年全球唯一一次日全食将来了)
-1. [特朗普24小时解决俄乌战争计划曝光](https://so.toutiao.com/search?keyword=特朗普24小时解决俄乌战争计划曝光)
-1. [合肥一补习班火灾有人爬窗逃生](https://so.toutiao.com/search?keyword=合肥一补习班火灾有人爬窗逃生)
+1. [网友吐槽五一调休：放不起就别放了](https://so.toutiao.com/search?keyword=网友吐槽五一调休：放不起就别放了)
 1. [中国养老金最大的问题是什么](https://so.toutiao.com/search?keyword=中国养老金最大的问题是什么)
+1. [老夫妇居家俩月用水1023吨](https://so.toutiao.com/search?keyword=老夫妇居家俩月用水1023吨)
+1. [警方通报山西临汾多人当街持械砸车](https://so.toutiao.com/search?keyword=警方通报山西临汾多人当街持械砸车)
+1. [租客退租房东不退押金称是行规](https://so.toutiao.com/search?keyword=租客退租房东不退押金称是行规)
+1. [以色列为何突然撤军](https://so.toutiao.com/search?keyword=以色列为何突然撤军)
+1. [女子在霸王茶姬脱光上衣坐柜台上](https://so.toutiao.com/search?keyword=女子在霸王茶姬脱光上衣坐柜台上)
+1. [特朗普24小时解决俄乌战争计划曝光](https://so.toutiao.com/search?keyword=特朗普24小时解决俄乌战争计划曝光)
+1. [今年全球唯一一次日全食将来了](https://so.toutiao.com/search?keyword=今年全球唯一一次日全食将来了)
+1. [成都“迪士尼”被拆除？街道办辟谣](https://so.toutiao.com/search?keyword=成都“迪士尼”被拆除？街道办辟谣)
+1. [青海柴达木发现大型金矿](https://so.toutiao.com/search?keyword=青海柴达木发现大型金矿)
+1. [男子进女厕偷窥被抓 母亲怒扇巴掌](https://so.toutiao.com/search?keyword=男子进女厕偷窥被抓+母亲怒扇巴掌)
+1. [女子4S店保养车被开出几万元费用](https://so.toutiao.com/search?keyword=女子4S店保养车被开出几万元费用)
+1. [律师解读邯郸初中生被害案](https://so.toutiao.com/search?keyword=律师解读邯郸初中生被害案)
+1. [大妈砸奔驰事件更多细节曝光](https://so.toutiao.com/search?keyword=大妈砸奔驰事件更多细节曝光)
+1. [失业送外卖的985硕士入职当老师](https://so.toutiao.com/search?keyword=失业送外卖的985硕士入职当老师)
+1. [奚梦瑶当街训斥老公何猷君](https://so.toutiao.com/search?keyword=奚梦瑶当街训斥老公何猷君)
+1. [以军回应从加沙南部撤出所有部队](https://so.toutiao.com/search?keyword=以军回应从加沙南部撤出所有部队)
+1. [成都地铁一男子疑站立猥亵](https://so.toutiao.com/search?keyword=成都地铁一男子疑站立猥亵)
+1. [提灯定损事件的违建房会拆除吗](https://so.toutiao.com/search?keyword=提灯定损事件的违建房会拆除吗)
+1. [高校回应招生副科长被举报聚众淫乱](https://so.toutiao.com/search?keyword=高校回应招生副科长被举报聚众淫乱)
+1. [未成年犯自述如何成为霸凌者](https://so.toutiao.com/search?keyword=未成年犯自述如何成为霸凌者)
+1. [扎克伯格身家超过马斯克](https://so.toutiao.com/search?keyword=扎克伯格身家超过马斯克)
+1. [俄哈边境一大坝决堤致3死](https://so.toutiao.com/search?keyword=俄哈边境一大坝决堤致3死)
+1. [囤金大户忙着把黄金变现](https://so.toutiao.com/search?keyword=囤金大户忙着把黄金变现)
+1. [合肥一补习班火灾有人爬窗逃生](https://so.toutiao.com/search?keyword=合肥一补习班火灾有人爬窗逃生)
+1. [俄乌打响争夺战略要地之战](https://so.toutiao.com/search?keyword=俄乌打响争夺战略要地之战)
+1. [女子将百万豪车送修却发现车被卖了](https://so.toutiao.com/search?keyword=女子将百万豪车送修却发现车被卖了)
+1. [“成都迪士尼”为啥火了](https://so.toutiao.com/search?keyword=“成都迪士尼”为啥火了)
+1. [丰田汽车将与华为合作造车](https://so.toutiao.com/search?keyword=丰田汽车将与华为合作造车)
+1. [俄新兵歼敌27人被授予国家最高奖章](https://so.toutiao.com/search?keyword=俄新兵歼敌27人被授予国家最高奖章)
+1. [克莱32分库里轮休 勇士击败爵士](https://so.toutiao.com/search?keyword=克莱32分库里轮休+勇士击败爵士)
 1. [莫斯科恐袭案主犯审讯画面首次曝光](https://so.toutiao.com/search?keyword=莫斯科恐袭案主犯审讯画面首次曝光)
+1. [伊朗称以色列驻外使领馆不再安全](https://so.toutiao.com/search?keyword=伊朗称以色列驻外使领馆不再安全)
 1. [虐猫考生已参加兰大研究生调剂复试](https://so.toutiao.com/search?keyword=虐猫考生已参加兰大研究生调剂复试)
+1. [小学生“打烟牌”该不该禁](https://so.toutiao.com/search?keyword=小学生“打烟牌”该不该禁)
+1. [媒体：中美经贸根植于两国共同利益](https://so.toutiao.com/search?keyword=媒体：中美经贸根植于两国共同利益)
+1. [大V：为何中国不增加假期提高消费](https://so.toutiao.com/search?keyword=大V：为何中国不增加假期提高消费)
+1. [曝西方助乌袭击1200公里外俄目标](https://so.toutiao.com/search?keyword=曝西方助乌袭击1200公里外俄目标)
+1. [普京称俄正处于历史上的艰难时期](https://so.toutiao.com/search?keyword=普京称俄正处于历史上的艰难时期)
+1. [曝导游遭南昌火车站保安扣留](https://so.toutiao.com/search?keyword=曝导游遭南昌火车站保安扣留)
+1. [女生接老人回家小住 老人早早等候](https://so.toutiao.com/search?keyword=女生接老人回家小住+老人早早等候)
+1. [刘美频已任青海省纪委书记](https://so.toutiao.com/search?keyword=刘美频已任青海省纪委书记)
+1. [虐猫考生说不是很懂舆论暂不回应](https://so.toutiao.com/search?keyword=虐猫考生说不是很懂舆论暂不回应)
+1. [未来三天北方将有一次降温降水过程](https://so.toutiao.com/search?keyword=未来三天北方将有一次降温降水过程)
+1. [马克·威廉姆斯：没想到49岁能夺冠](https://so.toutiao.com/search?keyword=马克·威廉姆斯：没想到49岁能夺冠)
+1. [假期消费“热辣滚烫”](https://so.toutiao.com/search?keyword=假期消费“热辣滚烫”)
 1. [李雪琴答题速度惊呆十个勤天](https://so.toutiao.com/search?keyword=李雪琴答题速度惊呆十个勤天)
 1. [夫妻争吵 一岁多儿子立马维护妈妈](https://so.toutiao.com/search?keyword=夫妻争吵+一岁多儿子立马维护妈妈)
-1. [成都“迪士尼”被拆除？街道办辟谣](https://so.toutiao.com/search?keyword=成都“迪士尼”被拆除？街道办辟谣)
 1. [俄媒：俄中两国需共同应对外部威胁](https://so.toutiao.com/search?keyword=俄媒：俄中两国需共同应对外部威胁)
 1. [奔驰车主回应轧蒜苗被砸车](https://so.toutiao.com/search?keyword=奔驰车主回应轧蒜苗被砸车)
-1. [虐猫考生说不是很懂舆论暂不回应](https://so.toutiao.com/search?keyword=虐猫考生说不是很懂舆论暂不回应)
 1. [第一批去埃及旅行的人快被骗到裸奔](https://so.toutiao.com/search?keyword=第一批去埃及旅行的人快被骗到裸奔)
-1. [青海柴达木发现大型金矿](https://so.toutiao.com/search?keyword=青海柴达木发现大型金矿)
 1. [广东韶关7名村民扫墓时遭遇雷击](https://so.toutiao.com/search?keyword=广东韶关7名村民扫墓时遭遇雷击)
 1. [媒体人：NBA西部继续附加赛大逃杀](https://so.toutiao.com/search?keyword=媒体人：NBA西部继续附加赛大逃杀)
 1. [iPhone 16系列外观曝光](https://so.toutiao.com/search?keyword=iPhone+16系列外观曝光)
 1. [五一假期前后都要调休上班](https://so.toutiao.com/search?keyword=五一假期前后都要调休上班)
 1. [加沙停火谈判正努力解决关键争议点](https://so.toutiao.com/search?keyword=加沙停火谈判正努力解决关键争议点)
 1. [央行为什么增持黄金储备](https://so.toutiao.com/search?keyword=央行为什么增持黄金储备)
-1. [成都地铁一男子疑站立猥亵](https://so.toutiao.com/search?keyword=成都地铁一男子疑站立猥亵)
-1. [普京称俄正处于历史上的艰难时期](https://so.toutiao.com/search?keyword=普京称俄正处于历史上的艰难时期)
 1. [为免门票游客集体背诵《蜀道难》](https://so.toutiao.com/search?keyword=为免门票游客集体背诵《蜀道难》)
 1. [女子半身被卷入扶梯 超市暂停营业](https://so.toutiao.com/search?keyword=女子半身被卷入扶梯+超市暂停营业)
-1. [俄新兵歼敌27人被授予国家最高奖章](https://so.toutiao.com/search?keyword=俄新兵歼敌27人被授予国家最高奖章)
 1. [全红婵家族清明祭祖场面引争议](https://so.toutiao.com/search?keyword=全红婵家族清明祭祖场面引争议)
-1. [囤金大户忙着把黄金变现](https://so.toutiao.com/search?keyword=囤金大户忙着把黄金变现)
-1. [马克·威廉姆斯：没想到49岁能夺冠](https://so.toutiao.com/search?keyword=马克·威廉姆斯：没想到49岁能夺冠)
-1. [俄乌打响争夺战略要地之战](https://so.toutiao.com/search?keyword=俄乌打响争夺战略要地之战)
 1. [仝卓工作室向仝卓讨债](https://so.toutiao.com/search?keyword=仝卓工作室向仝卓讨债)
-1. [女子将百万豪车送修却发现车被卖了](https://so.toutiao.com/search?keyword=女子将百万豪车送修却发现车被卖了)
 1. [3月俄罗斯汽车销量：中国品牌占9席](https://so.toutiao.com/search?keyword=3月俄罗斯汽车销量：中国品牌占9席)
 1. [警察用夹子音耐心安抚走失小女孩](https://so.toutiao.com/search?keyword=警察用夹子音耐心安抚走失小女孩)
 1. [德企争夺朔尔茨访华随团席位](https://so.toutiao.com/search?keyword=德企争夺朔尔茨访华随团席位)
@@ -47,13 +77,10 @@
 1. [今年还要调休3次](https://so.toutiao.com/search?keyword=今年还要调休3次)
 1. [耶伦两次访华有何不同](https://so.toutiao.com/search?keyword=耶伦两次访华有何不同)
 1. [以色列何以从被同情走向被广泛批评](https://so.toutiao.com/search?keyword=以色列何以从被同情走向被广泛批评)
-1. [曝西方助乌袭击1200公里外俄目标](https://so.toutiao.com/search?keyword=曝西方助乌袭击1200公里外俄目标)
 1. [专家建议允许不合适的公务员辞职](https://so.toutiao.com/search?keyword=专家建议允许不合适的公务员辞职)
 1. [德国总理将带三部长来华](https://so.toutiao.com/search?keyword=德国总理将带三部长来华)
 1. [媒体人：范志毅是辽宁铁人领队](https://so.toutiao.com/search?keyword=媒体人：范志毅是辽宁铁人领队)
-1. [扎克伯格身家超过马斯克](https://so.toutiao.com/search?keyword=扎克伯格身家超过马斯克)
 1. [德博物馆调查八国联军劫掠中国文物](https://so.toutiao.com/search?keyword=德博物馆调查八国联军劫掠中国文物)
-1. [提灯定损事件的违建房会拆除吗](https://so.toutiao.com/search?keyword=提灯定损事件的违建房会拆除吗)
 1. [邯郸初中生被害案3名嫌犯将承担刑责](https://so.toutiao.com/search?keyword=邯郸初中生被害案3名嫌犯将承担刑责)
 1. [萌娃和老爸聊天句句有回应](https://so.toutiao.com/search?keyword=萌娃和老爸聊天句句有回应)
 1. [高校干部被举报有不正当关系](https://so.toutiao.com/search?keyword=高校干部被举报有不正当关系)
@@ -62,7 +89,6 @@
 1. [俄外长访华要谈哪些问题](https://so.toutiao.com/search?keyword=俄外长访华要谈哪些问题)
 1. [“提灯定损”事发地住着很多陪读妈妈](https://so.toutiao.com/search?keyword=“提灯定损”事发地住着很多陪读妈妈)
 1. [中办通知：在全党开展党纪学习教育](https://so.toutiao.com/search?keyword=中办通知：在全党开展党纪学习教育)
-1. [女生接老人回家小住 老人早早等候](https://so.toutiao.com/search?keyword=女生接老人回家小住+老人早早等候)
 1. [媒体：美财长耶伦或许是中餐爱好者](https://so.toutiao.com/search?keyword=媒体：美财长耶伦或许是中餐爱好者)
 1. [美航司波音客机起飞时发动机罩脱落](https://so.toutiao.com/search?keyword=美航司波音客机起飞时发动机罩脱落)
 1. [夫妻吵架美警进门直接打死持枪丈夫](https://so.toutiao.com/search?keyword=夫妻吵架美警进门直接打死持枪丈夫)
