--- a/archives/toutiao-search/2024-04-09.md
+++ b/archives/toutiao-search/2024-04-09.md
@@ -1,55 +1,77 @@
 # 2024-04-09
 
-共 278 条
+共 299 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 09 2024 18:00:50 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 09 2024 19:00:43 GMT+0800 (China Standard Time) -->
+1. [海底捞回应顾客吐槽锅底污垢包浆](https://so.toutiao.com/search?keyword=海底捞回应顾客吐槽锅底污垢包浆)
 1. [教育局回应学生被老师殴打跳楼去世](https://so.toutiao.com/search?keyword=教育局回应学生被老师殴打跳楼去世)
-1. [五一法定节假日是1天](https://so.toutiao.com/search?keyword=五一法定节假日是1天)
 1. [轨道上的长三角在“提速”](https://so.toutiao.com/search?keyword=轨道上的长三角在“提速”)
-1. [金价飙涨引发多米诺效应](https://so.toutiao.com/search?keyword=金价飙涨引发多米诺效应)
-1. [华为P70或突袭上架](https://so.toutiao.com/search?keyword=华为P70或突袭上架)
+1. [五一法定节假日是1天](https://so.toutiao.com/search?keyword=五一法定节假日是1天)
 1. [淘宝买到假茅台官方拒绝10倍赔偿](https://so.toutiao.com/search?keyword=淘宝买到假茅台官方拒绝10倍赔偿)
-1. [曝伊朗为“不报复以色列”开条件](https://so.toutiao.com/search?keyword=曝伊朗为“不报复以色列”开条件)
+1. [俄外长：俄中关系达到前所未有水平](https://so.toutiao.com/search?keyword=俄外长：俄中关系达到前所未有水平)
+1. [金价飙涨引发多米诺效应](https://so.toutiao.com/search?keyword=金价飙涨引发多米诺效应)
 1. [男子翻墙入校砍伤3名老师 警方通报](https://so.toutiao.com/search?keyword=男子翻墙入校砍伤3名老师+警方通报)
-1. [华为Mate 70系列最新曝光](https://so.toutiao.com/search?keyword=华为Mate+70系列最新曝光)
 1. [媒体人：朱婷地位比我们想的还要高](https://so.toutiao.com/search?keyword=媒体人：朱婷地位比我们想的还要高)
+1. [网传一飞行员烈士家属称孩子遭霸凌](https://so.toutiao.com/search?keyword=网传一飞行员烈士家属称孩子遭霸凌)
+1. [演员刘雨欣吐槽在美国不敢生病](https://so.toutiao.com/search?keyword=演员刘雨欣吐槽在美国不敢生病)
 1. [专家谈养老金：领钱的多交钱的少](https://so.toutiao.com/search?keyword=专家谈养老金：领钱的多交钱的少)
-1. [金价破700元 不少市民选择出手黄金](https://so.toutiao.com/search?keyword=金价破700元+不少市民选择出手黄金)
 1. [湖南永州网红浮桥被冲走？官方辟谣](https://so.toutiao.com/search?keyword=湖南永州网红浮桥被冲走？官方辟谣)
+1. [岳婿双行长的问题出在哪](https://so.toutiao.com/search?keyword=岳婿双行长的问题出在哪)
+1. [金价破700元 不少市民选择出手黄金](https://so.toutiao.com/search?keyword=金价破700元+不少市民选择出手黄金)
+1. [外交部回应美财长耶伦涉华言论](https://so.toutiao.com/search?keyword=外交部回应美财长耶伦涉华言论)
 1. [俄媒谈中国推动以旧换新：前所未有](https://so.toutiao.com/search?keyword=俄媒谈中国推动以旧换新：前所未有)
 1. [黄金大涨谁最受益](https://so.toutiao.com/search?keyword=黄金大涨谁最受益)
-1. [岳婿双行长的问题出在哪](https://so.toutiao.com/search?keyword=岳婿双行长的问题出在哪)
-1. [7000元苹果手机维修费竟要14000元](https://so.toutiao.com/search?keyword=7000元苹果手机维修费竟要14000元)
-1. [曝南昌一教授房东扣租客300元押金](https://so.toutiao.com/search?keyword=曝南昌一教授房东扣租客300元押金)
-1. [办宴席须报备是进步还是权力越界](https://so.toutiao.com/search?keyword=办宴席须报备是进步还是权力越界)
-1. [五一还放过七天假](https://so.toutiao.com/search?keyword=五一还放过七天假)
+1. [黄磊首谈儿子](https://so.toutiao.com/search?keyword=黄磊首谈儿子)
+1. [澳称没计划在AUKUS中增加第4个成员](https://so.toutiao.com/search?keyword=澳称没计划在AUKUS中增加第4个成员)
 1. [央视评三名初中生涉嫌杀害同学](https://so.toutiao.com/search?keyword=央视评三名初中生涉嫌杀害同学)
 1. [耶伦透露访华成果](https://so.toutiao.com/search?keyword=耶伦透露访华成果)
-1. [男子发现儿子玩游戏充值自扇耳光](https://so.toutiao.com/search?keyword=男子发现儿子玩游戏充值自扇耳光)
-1. [香港海关查获146公斤走私黄金](https://so.toutiao.com/search?keyword=香港海关查获146公斤走私黄金)
+1. [记者暗访藏身医院的男性根浴服务](https://so.toutiao.com/search?keyword=记者暗访藏身医院的男性根浴服务)
+1. [曝伊朗为“不报复以色列”开条件](https://so.toutiao.com/search?keyword=曝伊朗为“不报复以色列”开条件)
+1. [反诈老陈回应带货一晚销售额达10万](https://so.toutiao.com/search?keyword=反诈老陈回应带货一晚销售额达10万)
+1. [女子地铁吵架被掌掴](https://so.toutiao.com/search?keyword=女子地铁吵架被掌掴)
+1. [李四强抢劫案再审：律师作无罪辩护](https://so.toutiao.com/search?keyword=李四强抢劫案再审：律师作无罪辩护)
+1. [智己：无意挑战小米的泼天流量](https://so.toutiao.com/search?keyword=智己：无意挑战小米的泼天流量)
 1. [拉夫罗夫耶伦马英九8日同在北京](https://so.toutiao.com/search?keyword=拉夫罗夫耶伦马英九8日同在北京)
+1. [办宴席须报备是进步还是权力越界](https://so.toutiao.com/search?keyword=办宴席须报备是进步还是权力越界)
+1. [百亿级公司天瑞水泥闪崩跌超99%](https://so.toutiao.com/search?keyword=百亿级公司天瑞水泥闪崩跌超99%)
+1. [媒体：自扇耳光的教育是“独角戏”](https://so.toutiao.com/search?keyword=媒体：自扇耳光的教育是“独角戏”)
+1. [“成都迪士尼”禁止唱歌只能拍照](https://so.toutiao.com/search?keyword=“成都迪士尼”禁止唱歌只能拍照)
+1. [日本自卫队使用错误表述 中方回应](https://so.toutiao.com/search?keyword=日本自卫队使用错误表述+中方回应)
+1. [媒体评虐猫考生接连被南大兰大刷下](https://so.toutiao.com/search?keyword=媒体评虐猫考生接连被南大兰大刷下)
+1. [男子发现儿子玩游戏充值自扇耳光](https://so.toutiao.com/search?keyword=男子发现儿子玩游戏充值自扇耳光)
+1. [雷军预祝智界S7大卖](https://so.toutiao.com/search?keyword=雷军预祝智界S7大卖)
+1. [社区回应禁止居民随意办酒席：试行](https://so.toutiao.com/search?keyword=社区回应禁止居民随意办酒席：试行)
+1. [支付宝崩了后已恢复正常](https://so.toutiao.com/search?keyword=支付宝崩了后已恢复正常)
+1. [未领证分手近20万彩礼退3万](https://so.toutiao.com/search?keyword=未领证分手近20万彩礼退3万)
+1. [黄金大涨普通人还能入局吗](https://so.toutiao.com/search?keyword=黄金大涨普通人还能入局吗)
+1. [曝华为门店订鲜花送给P70首批用户](https://so.toutiao.com/search?keyword=曝华为门店订鲜花送给P70首批用户)
+1. [五一还放过七天假](https://so.toutiao.com/search?keyword=五一还放过七天假)
 1. [曝《庆余年2》5月定档](https://so.toutiao.com/search?keyword=曝《庆余年2》5月定档)
+1. [网友：执法人员与村妇仅仅是冲突吗](https://so.toutiao.com/search?keyword=网友：执法人员与村妇仅仅是冲突吗)
+1. [公安悬赏3万抓捕66岁嫌犯](https://so.toutiao.com/search?keyword=公安悬赏3万抓捕66岁嫌犯)
+1. [孩子两天花费50元被妈妈教育](https://so.toutiao.com/search?keyword=孩子两天花费50元被妈妈教育)
+1. [华为智界S7将推新版本](https://so.toutiao.com/search?keyword=华为智界S7将推新版本)
+1. [北京大兴机场海关查获57瓶寄生虫](https://so.toutiao.com/search?keyword=北京大兴机场海关查获57瓶寄生虫)
+1. [传台外事部门负责人吴钊燮将升官](https://so.toutiao.com/search?keyword=传台外事部门负责人吴钊燮将升官)
+1. [华为P70或突袭上架](https://so.toutiao.com/search?keyword=华为P70或突袭上架)
+1. [华为Mate 70系列最新曝光](https://so.toutiao.com/search?keyword=华为Mate+70系列最新曝光)
+1. [7000元苹果手机维修费竟要14000元](https://so.toutiao.com/search?keyword=7000元苹果手机维修费竟要14000元)
+1. [曝南昌一教授房东扣租客300元押金](https://so.toutiao.com/search?keyword=曝南昌一教授房东扣租客300元押金)
+1. [香港海关查获146公斤走私黄金](https://so.toutiao.com/search?keyword=香港海关查获146公斤走私黄金)
 1. [90后姑娘辞职去摆摊 最高月入近9万](https://so.toutiao.com/search?keyword=90后姑娘辞职去摆摊+最高月入近9万)
 1. [俄远东发现放射源城市解除紧急状态](https://so.toutiao.com/search?keyword=俄远东发现放射源城市解除紧急状态)
-1. [曝华为门店订鲜花送给P70首批用户](https://so.toutiao.com/search?keyword=曝华为门店订鲜花送给P70首批用户)
 1. [专家：金价飙升反映纸币信用的缺失](https://so.toutiao.com/search?keyword=专家：金价飙升反映纸币信用的缺失)
-1. [智己：无意挑战小米的泼天流量](https://so.toutiao.com/search?keyword=智己：无意挑战小米的泼天流量)
-1. [支付宝崩了后已恢复正常](https://so.toutiao.com/search?keyword=支付宝崩了后已恢复正常)
 1. [飞天茅台批发价下探至2510元/瓶](https://so.toutiao.com/search?keyword=飞天茅台批发价下探至2510元/瓶)
 1. [“百元机”努比亚小牛发布](https://so.toutiao.com/search?keyword=“百元机”努比亚小牛发布)
 1. [媒体：朱婷回归中国女排皆大欢喜](https://so.toutiao.com/search?keyword=媒体：朱婷回归中国女排皆大欢喜)
 1. [骑车穿行“成都迪士尼”被拦](https://so.toutiao.com/search?keyword=骑车穿行“成都迪士尼”被拦)
 1. [女子称抱着骨灰盒时服务员来推销](https://so.toutiao.com/search?keyword=女子称抱着骨灰盒时服务员来推销)
-1. [俄外长：俄中关系达到前所未有水平](https://so.toutiao.com/search?keyword=俄外长：俄中关系达到前所未有水平)
 1. [伊朗称未来几天对以方来说非常困难](https://so.toutiao.com/search?keyword=伊朗称未来几天对以方来说非常困难)
 1. [网红一笑倾城自曝患癌已出院](https://so.toutiao.com/search?keyword=网红一笑倾城自曝患癌已出院)
 1. [金价攀升很多人一袋一袋卖黄金](https://so.toutiao.com/search?keyword=金价攀升很多人一袋一袋卖黄金)
 1. [谢龙介接国民党台南市党部主委](https://so.toutiao.com/search?keyword=谢龙介接国民党台南市党部主委)
 1. [中俄外长在京协调立场](https://so.toutiao.com/search?keyword=中俄外长在京协调立场)
-1. [黄磊首谈儿子](https://so.toutiao.com/search?keyword=黄磊首谈儿子)
-1. [媒体：自扇耳光的教育是“独角戏”](https://so.toutiao.com/search?keyword=媒体：自扇耳光的教育是“独角戏”)
-1. [网友：执法人员与村妇仅仅是冲突吗](https://so.toutiao.com/search?keyword=网友：执法人员与村妇仅仅是冲突吗)
 1. [浙江东阳现“提灯定损”：双方和解](https://so.toutiao.com/search?keyword=浙江东阳现“提灯定损”：双方和解)
 1. [12岁小学生800米跑出2分21秒](https://so.toutiao.com/search?keyword=12岁小学生800米跑出2分21秒)
 1. [韩媒：C罗本性难移](https://so.toutiao.com/search?keyword=韩媒：C罗本性难移)
@@ -98,7 +120,6 @@
 1. [到期后退房 房东列清单要求赔7千多](https://so.toutiao.com/search?keyword=到期后退房+房东列清单要求赔7千多)
 1. [虐猫考生未被录取是“舆论胜利”吗](https://so.toutiao.com/search?keyword=虐猫考生未被录取是“舆论胜利”吗)
 1. [日全食上演 美国民众欢呼尖叫](https://so.toutiao.com/search?keyword=日全食上演+美国民众欢呼尖叫)
-1. [北京大兴机场海关查获57瓶寄生虫](https://so.toutiao.com/search?keyword=北京大兴机场海关查获57瓶寄生虫)
 1. [日本家电在中国市场不吃香了吗](https://so.toutiao.com/search?keyword=日本家电在中国市场不吃香了吗)
 1. [中国女排世界联赛赛程公布](https://so.toutiao.com/search?keyword=中国女排世界联赛赛程公布)
 1. [专家：菲律宾找美国撑腰反被当棋子](https://so.toutiao.com/search?keyword=专家：菲律宾找美国撑腰反被当棋子)
